--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,12 @@
   "extends": ["@tsconfig/strictest/tsconfig.json", "@tsconfig/node18/tsconfig.json"],
   "exclude": ["node_modules", "dist", "bin"],
   "compilerOptions": {
-    "module": "Node16",
-    "moduleResolution": "node16",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "verbatimModuleSyntax": false,
     "noEmit": true,
     /* Lint Options */
     "noUnusedLocals": false, // Delegate to @typescript-eslint/no-unused-vars in eslint
-    "noUnusedParameters": false, // Delegate to @typescript-eslint/no-unused-vars in eslint
+    "noUnusedParameters": false // Delegate to @typescript-eslint/no-unused-vars in eslint
   }
 }
