--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "dev": "npm run build && node bin/example-command.js",
+    "gen": "graphql-codegen",
     "lint": "run-s -c lint:*",
     "lint:tsc": "tsc",
     "lint:eslint": "eslint .",
@@ -27,6 +28,8 @@
   },
   "prettier": "@mizdra/prettier-config-mizdra",
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
     "@mizdra/eslint-config-mizdra": "^2.0.0",
     "@mizdra/prettier-config-mizdra": "^1.0.0",
     "@tsconfig/node18": "^1.0.1",
@@ -34,6 +37,7 @@
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.15.11",
     "eslint": "^8.38.0",
+    "graphql-codegen-typescript-mock-data": "^3.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.7",
     "typescript": "^5.0.4",
