--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/typescript": "^4.0.1",
     "@mizdra/eslint-config-mizdra": "^2.0.0",
+    "@mizdra/graphql-codegen-typescript-mock-data": "^3.6.0-alpha.0",
     "@mizdra/prettier-config-mizdra": "^1.0.0",
     "@tsconfig/node18": "^1.0.1",
     "@tsconfig/strictest": "^2.0.0",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.15.11",
     "eslint": "^8.38.0",
-    "graphql-codegen-typescript-mock-data": "^3.5.0",
+    "graphql": "^16.7.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.7",
     "typescript": "^5.0.4",
